horizontal-bar on searchbar

--- a/content.css
+++ b/content.css
@@ -62,6 +62,7 @@ shreddit-feed.unhook-reddit-visible,
 recent-posts.unhook-reddit-visible,
 #reddit-trending-searches-partial-container.unhook-reddit-visible,
 faceplate-tracker[data-testid="reddit-trending-result"].unhook-reddit-visible,
+div.w-full.border-solid.border-b-sm.border-t-0.border-r-0.border-l-0.border-neutral-border.unhook-reddit-visible,
 [data-testid="feed"].unhook-reddit-visible,
 [data-testid="home-feed"].unhook-reddit-visible,
 [data-testid="subreddit-feed"].unhook-reddit-visible,
