add search to css instant-hide

--- a/content.css
+++ b/content.css
@@ -12,6 +12,10 @@ shreddit-feed,
 /* Hide other elements by default */
 #left-sidebar,
 recent-posts,
+reddit-search-large,
+[data-testid="search"],
+[data-testid="search-bar"],
+[data-testid="search-large"],
 #reddit-trending-searches-partial-container,
 faceplate-tracker[data-testid="reddit-trending-result"],
 [data-testid="comment"],
@@ -60,6 +64,10 @@ body [data-testid="subreddit-feed"] {
 shreddit-feed.unhook-reddit-visible,
 #left-sidebar.unhook-reddit-visible,
 recent-posts.unhook-reddit-visible,
+reddit-search-large.unhook-reddit-visible,
+[data-testid="search"].unhook-reddit-visible,
+[data-testid="search-bar"].unhook-reddit-visible,
+[data-testid="search-large"].unhook-reddit-visible,
 #reddit-trending-searches-partial-container.unhook-reddit-visible,
 faceplate-tracker[data-testid="reddit-trending-result"].unhook-reddit-visible,
 div.w-full.border-solid.border-b-sm.border-t-0.border-r-0.border-l-0.border-neutral-border.unhook-reddit-visible,
@@ -134,6 +142,10 @@ shreddit-feed:not(.unhook-reddit-visible),
 [data-testid="comment"]:not(.unhook-reddit-visible),
 [data-testid="comment-tree"]:not(.unhook-reddit-visible),
 recent-posts:not(.unhook-reddit-visible),
+reddit-search-large:not(.unhook-reddit-visible),
+[data-testid="search"]:not(.unhook-reddit-visible),
+[data-testid="search-bar"]:not(.unhook-reddit-visible),
+[data-testid="search-large"]:not(.unhook-reddit-visible),
 [data-testid="recent-posts"]:not(.unhook-reddit-visible),
 [data-testid="trending-posts"]:not(.unhook-reddit-visible),
 #reddit-trending-searches-partial-container:not(.unhook-reddit-visible),
