--- a/content.css
+++ b/content.css
@@ -1,11 +1,14 @@
 shreddit-feed:not(.unhook-reddit-visible),
 shreddit-comment:not(.unhook-reddit-visible),
+community-highlight-carousel:not(.unhook-reddit-visible),
 recent-posts:not(.unhook-reddit-visible),
 reddit-search-large:not(.unhook-reddit-visible),
 #reddit-trending-searches-partial-container:not(.unhook-reddit-visible),
 div.ml-md.mt-sm.mb-2xs.text-neutral-content-weak.flex.items-center.unhook-reddit-visible,
 div.w-full.border-solid.border-b-sm.border-t-0.border-r-0.border-l-0.border-neutral-border.unhook-reddit-visible,
 #left-sidebar:not(.unhook-reddit-visible),
+#right-sidebar-contents:not(.unhook-reddit-visible),
+#subreddit-right-rail__partial:not(.unhook-reddit-visible),
 #popular-posts:not(.unhook-reddit-visible),
 #explore-communities:not(.unhook-reddit-visible),
 #multireddits_section:not(.unhook-reddit-visible),
